- 서브페이지 기본 구조 작성 중

--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -6,6 +6,7 @@
 .font-en {font-family:'Open Sans', 'Noto Sans KR', 'Malgun Gothic', 'Dotum', sans-serif;}
 .font-tit {font-family:'Anton', 'Malgun Gothic', 'Dotum', sans-serif;}
 .font-tit2 {font-family:'Cinzel Decorative', cursive;}
+.font-logo {font-family:'Jura', sans-serif;}
 .font-icon {font-family:"Font Awesome 5 Free", sans-serif;}
 
 
