--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -116,6 +116,19 @@
 			background-image:url('@{bg-url}/logo_140_desktop.gif');
 			background-size:100px auto;
 		}
+		.sub_page .uk_logo a {
+			position:relative;
+			background-size:45px auto;
+			background-position:4px 12px;
+			&:before {
+				position:absolute; left:-5px; bottom:14px; z-index:2;
+				width:130px; line-height:100%; padding:3px 0 0 9px;
+				.font-logo; font-size:18px; color:#fff; font-weight:700;
+				letter-spacing:-1px;
+				background:@navy;
+				content:attr(data-tit);
+			}
+		}
 	}
 
 
@@ -410,6 +423,7 @@
 		}
 		.sub_page .uk_header {
 			.uk_logo:before {
+				//right:-30px; top:0;
 				right:-30px; top:0;
 				height:@hdHeightMb;
 			}
@@ -434,7 +448,7 @@
 	}
 	.hd_logo a, .hd_nav_area .nav, .search_btn {transition:filter @hd_layer_time - .2s;}
 	.hd_assetsLink {
-		* {color:#fff; font-weight:300;}
+		* {color:#ccc; font-weight:300;}
 		.assetsLink_area {
 			overflow-x:hidden; overflow-y:hidden; opacity:0;
 			display:block;
@@ -509,7 +523,7 @@
 				font-size:14px; font-weight:400;
 				background:fade(#fff, 7%); border-radius:3px;
 				&:before {left:@d2_pd; top:@d2_pd;}
-				> a {padding-left:18px;}
+				> a {padding-left:18px; color:#fff;}
 				&.on:before,
 				&.on > a {color:lighten(@blue, 20%); font-weight:500;}
 				&.on:after {
@@ -524,16 +538,20 @@
 			}
 			.al_depth3 > li {
 				position:relative; font-size:13px;
-				&:before, > a {color:#ccc;}
+				&:before, a {color:#ccc;}
 				&:before {z-index:2;}
-				> a {position:relative; z-index:1; padding-left:32px;}
+				a {position:relative; z-index:1; padding-left:32px;}
+				.html5 {
+					margin:3px 0 0 4px; font-size:0;
+					&:before {font-size:14px;}
+				}
 				&:hover {
 					&:before,
-					> a  {color:lighten(@blue, 20%);}
+					a, b, i, p {color:lighten(@blue, 20%);}
 				}
 				&.on:before,
-				&.on > a {color:#fff;}
-				&.on > a:before {
+				&.on a, &.on b, &.on i, &.on p {color:#fff;}
+				&.on a:before {
 					position:absolute; left:-3px; right:-3px; z-index:-1;
 					height:100%;
 					background:fade(@blue, 50%);
@@ -1485,7 +1503,7 @@
 						transition:color .15s;
 					}
 					i {display:block; position:relative; z-index:1;}
-					&:hover a, &.on a {color:darken(@blue, 15%);}
+					&:hover a, &.on a {color:darken(@blue, 5%);}
 					&.on a {font-weight:600;}
 					&.on i:before {
 						position:absolute; left:-3px; right:-3px; bottom:5px; z-index:-1;
@@ -1524,17 +1542,25 @@
 	}
 	@media(max-width:@screen-sm-max){
 		.sub_top {
-			padding:70px 0 27px;
+			padding:60px 0 20px;
 
 			.tit {
 				line-height:120%; padding-top:0;
 				font-size:30px; font-weight:800;
 				letter-spacing:-1px;
-				&:before {left:-20px; right:-20px; height:22px; z-index:-1;}
+				&:before {
+
+					left:50%; right:auto; z-index:-1; transform:translate(-50%, 0);
+					height:0;
+					border-left:80px solid transparent;
+					border-right:80px solid transparent;
+					border-top:36px solid #eee;
+					background:transparent;
+				}
 			}
 			.top_link {
 				ul {
-					left:0; right:0; top:18px;
+					left:0; right:0; top:13px;
 					li {
 						padding-left:2px;
 						&:before {width:2px; height:2px; margin-top:-1px;}
@@ -1553,33 +1579,123 @@
 	}
 
 	//sub content common
-	.sub_content {
-		.clear; padding-top:50px; padding-bottom:100px;
-	}
+	@course_padding:50px;
+	.sub_content {.clear; padding-top:50px; padding-bottom:100px;}
+	.side_menu_area {.lft; width:250px;}
+	.content_area {.rgt; width:calc(100% - 250px); padding-left:60px;}
 
 	.side_menu_area {
-		.lft; width:250px;
-		position:sticky; top:@hdHeight + 20px;
+		position:sticky; top:@hdHeight + @course_padding;
 
-		.tit {}
+		.tit {
+			line-height:130%; padding-bottom:10px;
+			.font-en; font-size:18px; color:#777; font-weight:600; letter-spacing:-1px;
+			border-bottom:5px solid #eee;
+			b, i {display:inline-block;}
+			b {color:@navy; font-weight:800;}
+		}
 
-		.side_menu {margin-top:10px;}
-		li {margin-top:5px;}
-		li.on a {color:#fff; background:red;}
+		li {line-height:18px; font-size:14px; color:#888;}
+		a {
+			display:block; position:relative; z-index:1;
+			color:#888; font-weight:400; letter-spacing:-0.5px;
+		}
+		ol {
+			counter-reset:lst_number;
+			li {position:relative; counter-increment:lst_number;}
+			li:before {
+				position:absolute; left:0; top:0; z-index:2;
+				content:counters(lst_number, ".") ". ";
+			}
+			//.side_d2 li:before {top:50%; line-height:20px;  margin-top:-10px;}
+		}
+		.side_menu {
+			position:relative; overflow:hidden;
+			margin-top:30px;
+			//max-height:calc(100vh - (@hdHeight + 166px)); padding-right:20px;
+			//overflow-y:scroll;
+		}
+		.side_menu > ol > li {
+			padding-bottom:10px;
+			> a, > ol {padding-left:22px;}
+			> a {padding-right:15px;}
+			&:hover > a, &.on, &.on > a {color:@blue;}
+
+			> a.toggle_link:after {
+				position:absolute; right:0; top:50%; transform:translate(0, -50%);
+				border-left:4px solid transparent;
+				border-right:4px solid transparent;
+				border-top:6px solid #ccc;
+				content:"";
+			}
+			&.tg_on > a.toggle_link:after {
+				border-top:0;
+				border-bottom:6px solid @blue;
+			}
+		}
+		.side_d2 {
+			display:none; padding-bottom:5px;
+			&:before {display:block; width:100%; height:5px; content:"";}
+			li {
+				font-size:13px;
+				a {padding-left:32px;}
+				a, b {color:#444; font-weight:400;}
+				i {color:#888; font-weight:300;}
+				p {color:#aaa; font-weight:400;}
+				.html5 {
+					margin:3px 0 0 4px; font-size:0;
+					&:before {font-size:14px;}
+				}
+				&:hover {
+					a, b, i, p {color:@blue;}
+				}
+				&.on {
+					color:@blue;
+					/*&:after {
+						position:absolute; left:-15px; top:6px; z-index:2;
+						width:6px; height:6px; background:@blue; border-radius:100%;
+						content:"";
+					}*/
+					&:after {
+						position:absolute; left:-10px; top:3px; bottom:3px; z-index:2;
+						width:3px; background:@blue;
+						content:"";
+					}
+					a, b, i, p {color:@blue;}
+				}
+			}
+		}
+		.on .side_d2 {display:block;}
 	}
-	.content_area {
-		.rgt; width:calc(100% - 250px);
+
+
+	@media(max-width:@screen-md-max){
+		.side_menu_area {float:none; width:auto;}
+		.content_area {float:none; width:auto; padding-left:0;}
+	}
+
+	@media(max-width:@screen-sm-max){
+
 	}
 
 
-	.curriculum_box {
-		padding-top:50px;
+
+
+
+
+	.uk_course {
+		padding-top:@course_padding;
 		&:first-child {padding-top:0;}
 	}
 
 
 
 
+
+/*
+.touchflow-scrollbar { background:rgba(0,0,0,0.1); transition:300ms; position:absolute; bottom:0; right:0; overflow:hidden; }
+.touchflow-scrollbar div { background:rgba(0,0,0,0.3); position:absolute; top:0; left:0; }
+*/
 
 
 
