--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -4176,7 +4176,7 @@ body {
   display: inline-block;
   position: relative;
   z-index: 1;
-  line-height: 200%;
+  line-height: 80px;
   padding-top: 5px;
   font-family: 'Open Sans', 'Noto Sans KR', 'Malgun Gothic', 'Dotum', sans-serif;
   font-size: 38px;
@@ -4228,7 +4228,7 @@ body {
 }
 .sub_top .top_link ul li a {
   display: block;
-  line-height: 200%;
+  line-height: 36px;
   padding: 0 15px;
   font-size: 18px;
   color: rgba(8, 17, 33, 0.85);
@@ -4269,7 +4269,7 @@ body {
 }
 .sub_top .common_info,
 .sub_top .top_info {
-  line-height: 160%;
+  line-height: 22px;
   font-size: 14px;
   color: #666;
   font-weight: 400;
@@ -4302,7 +4302,7 @@ body {
     padding: 60px 0 20px;
   }
   .sub_top .tit {
-    line-height: 120%;
+    line-height: 36px;
     padding-top: 0;
     font-size: 30px;
     font-weight: 800;
@@ -4333,7 +4333,7 @@ body {
     margin-top: -1px;
   }
   .sub_top .top_link ul li a {
-    line-height: 260%;
+    line-height: 33px;
     padding: 0 6px;
     font-size: 13px;
     font-weight: 500;
@@ -4373,6 +4373,7 @@ body {
   top: 160px;
 }
 .side_menu_area .tit {
+  background: rgba(255, 0, 0, 0.1);
   line-height: 130%;
   padding-bottom: 10px;
   font-family: 'Open Sans', 'Noto Sans KR', 'Malgun Gothic', 'Dotum', sans-serif;
@@ -4519,6 +4520,11 @@ body {
 }
 .side_menu_area .on .side_d2 {
   display: block;
+}
+.content_area h1 {
+  height: 30px;
+  line-height: 30px;
+  background: rgba(30, 115, 255, 0.1);
 }
 @media (max-width: 993px) {
   .side_menu_area {
