- 페이지 스크롤 스크립트 테스트

--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -1587,7 +1587,7 @@
 	.side_menu_area {
 		position:sticky; top:@hdHeight + @course_padding;
 
-		.tit { background:fade(red, 10%);
+		.tit { //background:fade(red, 10%);
 			line-height:130%; padding-bottom:10px;
 			.font-en; font-size:18px; color:#777; font-weight:600; letter-spacing:-1px;
 			border-bottom:5px solid #eee;
