--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -767,7 +767,7 @@ input[type="range"]::-ms-thumb {
   letter-spacing: -0.3px;
   background: #bbb;
   border-radius: 3px;
-  transition: transform .15s, opacity .15s, margin 0s .15s;
+  transition: transform 0.15s, opacity 0.15s, margin 0s 0.15s;
 }
 .uk_editor .btn_wrap button i:before,
 .uk_editor .btn_wrap button i:after {
@@ -796,7 +796,7 @@ input[type="range"]::-ms-thumb {
   transform: translate(-50%, 0);
   opacity: 1;
   margin-top: 0;
-  transition: transform .15s, opacity .15s, margin 0s;
+  transition: transform 0.15s, opacity 0.15s, margin 0s;
 }
 .uk_editor .btn_wrap button:first-child {
   margin-left: 0;
@@ -865,7 +865,7 @@ input[type="range"]::-ms-thumb {
   font-size: 14px;
   color: #888;
   content: "\f129";
-  transition: color .15s;
+  transition: color 0.15s;
 }
 .uk_editor .btn_wrap .Info_btn i {
   background: #aaa;
@@ -938,7 +938,7 @@ input[type="range"]::-ms-thumb {
   box-shadow: none;
   background-color: transparent;
   background-position: 8px center;
-  transition: color .15s;
+  transition: color 0.15s;
 }
 .uk_editor.browser_mini .result_wrap .browserTitle i {
   left: 9px;
@@ -1591,7 +1591,7 @@ body {
   width: 100%;
   height: 100%;
   min-height: 100%;
-  transition: opacity .2s;
+  transition: opacity 0.2s;
 }
 .wrap:after {
   display: block;
@@ -1646,7 +1646,7 @@ body {
   width: 100%;
   height: 100%;
   background: #000000;
-  transition: opacity .4s, left 0s 0s;
+  transition: opacity 0.4s, left 0s 0s;
 }
 .loading i {
   position: absolute;
@@ -1663,12 +1663,12 @@ body {
   border: 0.8vw solid #1e73ff;
   border-right-color: transparent;
   border-radius: 100%;
-  animation: loading .6s linear infinite;
+  animation: loading 0.6s linear infinite;
 }
 .loading.hide_loading {
   left: -200vw;
   opacity: 0;
-  transition: opacity .5s, left 0s .5s;
+  transition: opacity 0.5s, left 0s 0.5s;
 }
 .hide_fix_loading .loading {
   transition: opacity 0s;
@@ -1691,7 +1691,7 @@ body {
   background-size: 184px auto;
   background-position: center center;
   background-repeat: no-repeat;
-  transition: width .6s, height .3s;
+  transition: width 0.6s, height 0.3s;
 }
 @media (max-width: 993px) {
   .uk_logo a {
@@ -1751,7 +1751,7 @@ body {
   opacity: 0;
   height: 2px;
   font-size: 0;
-  transition: opacity .4s;
+  transition: opacity 0.4s;
   content: "";
 }
 .uk_header:before {
@@ -1811,11 +1811,11 @@ body {
   left: 17px;
   right: 17px;
   bottom: 13px;
-  opacity: .7;
+  opacity: 0.7;
   height: 0;
   background: #1e73ff;
   border-radius: 2px;
-  transition: all .15s;
+  transition: all 0.15s;
   content: "";
 }
 .uk_header .hd_nav_area .nav a:hover:before,
@@ -2060,7 +2060,7 @@ body {
   width: 1920px;
   height: 110px;
   background: #081121;
-  transition: right .3s;
+  transition: right 0.3s;
   content: "";
 }
 .sub_page .uk_header .hd_nav_area .nav a {
@@ -2547,7 +2547,7 @@ body {
 }
 .hd_assetsLink .assetsLink_in .al_depth1 > li > a i {
   color: rgba(255, 255, 255, 0.7);
-  transition: color .15s;
+  transition: color 0.15s;
 }
 .hd_assetsLink .assetsLink_in .al_depth1 > li > a:hover i {
   color: #fff;
@@ -2888,18 +2888,18 @@ body {
   font-size: 15px;
   font-weight: 600;
   color: #bbb;
-  transition: all .15s;
+  transition: all 0.15s;
 }
 .uk_footer .nav a:after {
   position: absolute;
   left: -3px;
   right: -3px;
   bottom: 7px;
-  opacity: .7;
+  opacity: 0.7;
   height: 0;
   background: #1e73ff;
   border-radius: 2px;
-  transition: all .15s;
+  transition: all 0.15s;
   content: "";
 }
 .uk_footer .nav a:hover,
@@ -3023,7 +3023,7 @@ body {
   .uk_footer .btm .uk_logo a {
     width: 160px;
     height: 60px;
-    opacity: .6;
+    opacity: 0.6;
   }
   .uk_footer .btm .copy {
     line-height: 16px;
@@ -3088,7 +3088,7 @@ body {
 .main_intro .txt_box p {
   line-height: 110%;
   margin-top: 20px;
-  opacity: .7;
+  opacity: 0.7;
   font-family: 'Open Sans', 'Noto Sans KR', 'Malgun Gothic', 'Dotum', sans-serif;
   font-size: 18px;
   color: #fff;
@@ -3097,7 +3097,7 @@ body {
 .main_intro .txt_box .banner {
   margin-top: 50px;
   font-size: 0;
-  transition: all .5s ease;
+  transition: all 0.5s ease;
   /*
 				.bn1 {background-image:url('@{bg-url}/icon/icon_html_w64.png');}
 				.bn2 {background-image:url('@{bg-url}/icon/icon_css_w64.png');}
@@ -3115,7 +3115,7 @@ body {
   font-size: 13px;
   color: #fff;
   background-size: 100% auto;
-  transition: color .1s ease;
+  transition: color 0.1s ease;
 }
 .main_intro .txt_box .banner a:before {
   position: absolute;
@@ -3125,7 +3125,7 @@ body {
   height: 6px;
   transform: translate(-50%, -50%);
   border-radius: 100%;
-  transition: all .2s ease;
+  transition: all 0.2s ease;
   content: "";
 }
 .main_intro .txt_box .banner a:hover:before {
@@ -3171,12 +3171,12 @@ body {
   position: absolute;
   left: 50%;
   bottom: 40px;
-  opacity: .6;
+  opacity: 0.6;
   overflow: hidden;
   width: 100px;
   height: 50px;
   margin-left: -50px;
-  transition: opacity .15s;
+  transition: opacity 0.15s;
 }
 .main_intro .next_content i {
   position: absolute;
@@ -3220,7 +3220,7 @@ body {
 }
 @media (max-width: 900px) {
   .main_intro .txt_box strong {
-    font-size: 10.0vw;
+    font-size: 10vw;
   }
 }
 @media (max-width: 540px) {
@@ -3257,14 +3257,14 @@ body {
   }
   .main_intro .next_content {
     bottom: 20px;
-    opacity: .8;
+    opacity: 0.8;
     height: 50px;
   }
   .main_intro .next_content i {
     background-size: auto 12px;
   }
   .main_intro .next_content:hover {
-    opacity: .8;
+    opacity: 0.8;
   }
 }
 @media (max-width: 450px) {
@@ -3643,19 +3643,19 @@ body {
     height: 200%;
   }
   .main_info .keyboard .step1 i {
-    opacity: .4;
+    opacity: 0.4;
   }
   .main_info .keyboard .step2 i {
-    opacity: .3;
+    opacity: 0.3;
   }
   .main_info .keyboard .step3 i {
-    opacity: .2;
+    opacity: 0.2;
   }
   .main_info .keyboard .step4 i {
-    opacity: .1;
+    opacity: 0.1;
   }
   .main_info .keyboard .step5 i {
-    opacity: .05;
+    opacity: 0.05;
   }
   .main_info .keyboard .step1 i:before {
     background-image: url('../img/keyboard/step1_mb.png');
@@ -3785,7 +3785,7 @@ body {
     font-size: 12vw;
   }
   .main_editor h2 span {
-    font-size: 10.0vw;
+    font-size: 10vw;
   }
   .main_editor .txt p {
     font-size: 2.2vw;
@@ -3838,7 +3838,7 @@ body {
   position: absolute;
   left: 50%;
   top: -50%;
-  opacity: .4;
+  opacity: 0.4;
   width: 100px;
   height: 2px;
   margin-left: -50px;
@@ -3889,7 +3889,7 @@ body {
   transform: translate(-50%, -50%);
   width: 104%;
   height: 104%;
-  opacity: .3;
+  opacity: 0.3;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: auto 100%;
@@ -3909,7 +3909,7 @@ body {
   right: 0;
   top: 24%;
   z-index: 1;
-  opacity: .7;
+  opacity: 0.7;
   line-height: 100%;
   font-family: 'Anton', 'Malgun Gothic', 'Dotum', sans-serif;
   font-size: 26px;
@@ -3956,7 +3956,7 @@ body {
 .main_created .created li.hover:after {
   left: 7%;
   right: 7%;
-  opacity: .5;
+  opacity: 0.5;
 }
 .main_created .created li:hover .box:before,
 .main_created .created li.hover .box:before,
@@ -3970,7 +3970,7 @@ body {
 }
 .main_created .created li:hover .box:after,
 .main_created .created li.hover .box:after {
-  opacity: .4;
+  opacity: 0.4;
 }
 .main_created .created li:hover .box strong,
 .main_created .created li.hover .box strong {
@@ -4006,11 +4006,11 @@ body {
   }
   .device .main_created .created li .box strong {
     transform: translate(0, 50%);
-    opacity: .8;
+    opacity: 0.8;
   }
   .device .main_created .created li .box div {
     transform: translate(0, -50%);
-    opacity: .6;
+    opacity: 0.6;
   }
   .device .main_created .created li .box:after {
     display: none;
@@ -4023,17 +4023,17 @@ body {
   }
   .device .main_created .created li:hover .box:before,
   .device .main_created .created li.hover .box:before {
-    opacity: .3;
+    opacity: 0.3;
   }
   .device .main_created .created li:hover .box strong,
   .device .main_created .created li.hover .box strong {
     transform: translate(0, 50%);
-    opacity: .8;
+    opacity: 0.8;
   }
   .device .main_created .created li:hover .box div,
   .device .main_created .created li.hover .box div {
     transform: translate(0, -50%);
-    opacity: .6;
+    opacity: 0.6;
   }
 }
 @media (max-width: 993px) {
@@ -4114,11 +4114,11 @@ body {
   }
   .device .main_created .created li .box strong {
     transform: translate(0, 50%);
-    opacity: .8;
+    opacity: 0.8;
   }
   .device .main_created .created li .box div {
     transform: translate(0, -50%);
-    opacity: .6;
+    opacity: 0.6;
   }
   .device .main_created .created li .box:after {
     display: none;
@@ -4131,17 +4131,17 @@ body {
   }
   .device .main_created .created li:hover .box:before,
   .device .main_created .created li.hover .box:before {
-    opacity: .3;
+    opacity: 0.3;
   }
   .device .main_created .created li:hover .box strong,
   .device .main_created .created li.hover .box strong {
     transform: translate(0, 50%);
-    opacity: .8;
+    opacity: 0.8;
   }
   .device .main_created .created li:hover .box div,
   .device .main_created .created li.hover .box div {
     transform: translate(0, -50%);
-    opacity: .6;
+    opacity: 0.6;
   }
 }
 .sub_page {
@@ -4234,7 +4234,7 @@ body {
   color: rgba(8, 17, 33, 0.85);
   font-weight: 400;
   letter-spacing: -0.3px;
-  transition: color .15s;
+  transition: color 0.15s;
 }
 .sub_top .top_link ul li i {
   display: block;
@@ -4373,7 +4373,6 @@ body {
   top: 160px;
 }
 .side_menu_area .tit {
-  background: rgba(255, 0, 0, 0.1);
   line-height: 130%;
   padding-bottom: 10px;
   font-family: 'Open Sans', 'Noto Sans KR', 'Malgun Gothic', 'Dotum', sans-serif;
