- 검색 기본 열림 기능, 서브 세로 스크롤 액션 작업 완료 - 포커스 이동 작업 중

--- a/assets/lib/css/less/function.less
+++ b/assets/lib/css/less/function.less
@@ -1,6 +1,5 @@
 
 
-
 //function set
 .clear {
 	*zoom:1;
@@ -10,6 +9,14 @@
 .rgt {float:right;}
 .both {float:none; clear:both;}
 .ell {overflow:hidden; white-space:nowrap; text-overflow:ellipsis; -o-text-overflow:ellipsis;}
+
+//placeholder
+.placeholder(@color: #999){
+	&::-webkit-input-placeholder {color:@color;}
+	&:-moz-placeholder {color:@color;}
+	&::-moz-placeholder {color:@color;}
+	&:-ms-input-placeholder {color:@color;}
+}
 
 //display-flex
 .display-flex(){
