--- a/assets/lib/css/less/common.less
+++ b/assets/lib/css/less/common.less
@@ -122,9 +122,9 @@ input[type="range"] {
 
 
 //Skip Navigation
-.uk-skip {position:absolute;width:100%;margin:-1px 0 0 0;z-index:1000;}
-.uk-skip a {overflow:hidden;display:block;width:1px;height:1px;padding:0;text-align:center;white-space:nowrap;}
-.uk-skip a:hover,.uk-skip a:active,.uk-skip a:focus {width:auto;height:auto;margin:1px 0 0 0;padding:5px 10px;line-height:normal;background:#036;font-size:inherit;color:#fff;}
+.uk-skip {position:absolute;width:100%;margin:-5px 0 0 0;z-index:1000;}
+.uk-skip a {overflow:hidden;display:block;width:1px;height:1px;padding:0;text-align:center;font-size:20px;color:#fff;white-space:nowrap; background:@blue;}
+.uk-skip a:hover,.uk-skip a:active,.uk-skip a:focus {width:auto;height:auto;margin:5px 0 0 0;padding:15px 10px 18px;line-height:normal;}
 
 
 //uk_editor
